# ansible-role-offline-docker

./: Makefile  README.md  pyproject.toml
defaults/: main.yml
hacks/: offline-playbook.yml
meta/: main.yml
tasks/: main.yml
tests/: test.yml
vars/: main.yml
