[tool.poetry]
name = "ansible-role-offline-docker"
version = "1.0.0"
description = ""
authors = ["Mykhailo Chalyi"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "6.5.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
